--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -93,6 +93,10 @@
         settings:keywords="@string/keywords_color_mode" />
 
     <SwitchPreference
+        android:key="srgb"
+        android:title="@string/srgb_title" />
+
+    <SwitchPreference
         android:key="display_white_balance"
         android:title="@string/display_white_balance_title"
         android:summary="@string/display_white_balance_summary"
