Add sRGB description.
 * Add explanation in the case some users don´t know
   what sRGB is.

Change-Id: I603c765ac35893d266ecef27ac8d16e324d66d2d

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -149,5 +149,6 @@
 
    <!-- sRGB -->
     <string name="srgb_title">sRGB</string>
+    <string name="srgb_summary">Enable sRGB display calibration</string>
 
 </resources>
