--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -94,7 +94,8 @@
 
     <SwitchPreference
         android:key="srgb"
-        android:title="@string/srgb_title" />
+        android:title="@string/srgb_title"
+        android:summary="@string/srgb_summary" />
 
     <SwitchPreference
         android:key="display_white_balance"
