--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -153,5 +153,6 @@
 
     <!-- sRGB -->
     <string name="srgb_title">sRGB</string>
+    <string name="srgb_summary">Enable sRGB display calibration</string>
 
 </resources>
