--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -200,4 +200,8 @@
     <string name="disable_navkeys_title">Enable on-screen navigation bar</string>
     <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
 
+    <!-- Proximity wake -->
+    <string name="proximity_wake_title">Prevent accidental wake-up</string>
+    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
+
 </resources>
