--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -210,4 +210,12 @@
         android:selectable="false"
         settings:allowDividerAbove="true"
         settings:enableCopying="true"/>
+
+    <!-- SELinux status information -->
+    <Preference
+        android:key="selinux_status"
+        android:order="54"
+        android:title="@string/selinux_status"
+        android:summary="@string/selinux_status_enforcing"/>
+
 </PreferenceScreen>
