Add hardware buttons backlight toggle.
Change-Id: I69b35719d1b21040795a1e303d8d7edbb6cf5f68

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -150,5 +150,7 @@
     <!-- Buttons -->
     <string name="buttons_pref_title">Buttons</string>
     <string name="buttons_pref_summary">Customize device buttons</string>
+    <string name="hardware_brightness_keys_title">Backlight</string>
+    <string name="hardware_brightness_keys_summary">Turn on capacitive keys backlight</string>
 
 </resources>
