Buttons: Add swapping keys toggle.
Change-Id: I10a252cc074a88fa3ea8dddfefdf84cb35d314c9

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -152,5 +152,7 @@
     <string name="buttons_pref_summary">Customize device buttons</string>
     <string name="hardware_brightness_keys_title">Backlight</string>
     <string name="hardware_brightness_keys_summary">Turn on capacitive keys backlight</string>
+    <string name="swap_navigation_keys_title">Swap buttons</string>
+    <string name="swap_navigation_keys_summary">Swap back and recents buttons</string>
 
 </resources>
