Settings: add support for single tap to wake [4/4]
Change-Id: I718828645137965ea5b5342a567638d2e767c4d9

--- a/res/values/pa_arrays.xml
+++ b/res/values/pa_arrays.xml
@@ -20,6 +20,7 @@
     <string-array name="gestures_entries">
         <item>@string/gestures_disabled</item>
         <item>@string/gestures_wake_device</item>
+        <item>@string/gestures_single_tap</item>
         <item>@string/gestures_toggle_flashlight</item>
         <item>@string/gestures_toggle_airplane_mode</item>
         <item>@string/gestures_play_pause_music</item>
@@ -39,6 +40,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <!-- Fingerprint sensor locations.  Devices should configure their sensor location using
