Redesign the user controlled PLMN feature
Move and redesign the user controlled PLMN list feature
to "Settings" process to align to Google AOSP implementation.
1. Add two activities for user to search and edit PLMN.
2. Read/Write PLMN and Access technology from extphone service.

CRs-Fixed: 2638893
Change-Id: I1f6dfa355811bd10a5d93b2c4a6a16571f996feb

--- a/res/xml/mobile_network_settings.xml
+++ b/res/xml/mobile_network_settings.xml
@@ -226,6 +226,15 @@
             settings:allowDividerAbove="true"
             settings:controller="com.android.settings.network.telephony.ApnPreferenceController"/>
 
+        <PreferenceScreen
+            android:key="uplmn_settings_key"
+            android:persistent="false"
+            android:title="@string/uplmn_settings_title"
+            android:summary="@string/uplmn_settings_summary"
+            settings:allowDividerAbove="true"
+            settings:controller="com.android.settings.network.telephony.UserPLMNPreferenceController">
+        </PreferenceScreen>
+
         <Preference
             android:key="carrier_settings_key"
             android:title="@string/carrier_settings_title"
