--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -307,6 +307,19 @@
         <item>@string/wifi_ap_choose_vendor_dual_band</item>
     </string-array>
 
+   <!-- Wi-Fi AP Vendor band settings for OWE Transition mode.  Either 2.4GHz or 5GHz -->
+   <!-- Note: OWE transition mode SAP doesn't support dual band -->
+   <!-- Note: Adding/removing/moving the items will need wifi settings code change. -->
+    <string-array translatable="false" name="wifi_ap_band_vendor_config_no_dual">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array translatable="false" name="wifi_ap_band_vendor_summary_no_dual">
+        <item>@string/wifi_ap_choose_2G</item>
+        <item>@string/wifi_ap_choose_5G</item>
+    </string-array>
+
     <!-- Wi-Fi WPS setup for p2p connections.  -->
     <!-- Note that adding/removing/moving the items will need wifi settings code change. -->
     <string-array name="wifi_p2p_wps_setup">
