Add support for Paranoid FaceSense
Change-Id: I63cbf1f4cede9128b3f74db5f8a826d1dc023617

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -227,7 +227,7 @@
     <string name="config_contextual_card_feedback_email" translatable="false"></string>
 
     <!-- ComponentName to launch a vendor-specific enrollment activity if available -->
-    <string name="config_face_enroll" translatable="false"></string>
+    <string name="config_face_enroll" translatable="false">com.paranoid.facesense/com.paranoid.facesense.FaceEnrollEnrolling</string>
 
     <!-- App intent -->
     <string name="config_account_intent_uri" translatable="false"></string>
