--- a/res/xml/security_dashboard_settings.xml
+++ b/res/xml/security_dashboard_settings.xml
@@ -55,6 +55,12 @@
             android:title="@string/security_settings_face_preference_title"
             android:summary="@string/summary_placeholder"
             settings:keywords="@string/keywords_face_settings" />
+
+        <Preference
+            android:key="paranoid_face_settings"
+            android:title="@string/security_settings_face_preference_title"
+            android:summary="@string/summary_placeholder"
+            settings:keywords="@string/keywords_face_settings" />
     </PreferenceCategory>
 
     <!-- work profile security section -->
