Settings: add support for pulse to ambient display.
Signed-off-by: Hernán Castañón Álvarez <herna@paranoidandroid.co>
Change-Id: I4b7a2024a76a4f8c25821c23264e9f6509fd3937

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -47,6 +47,7 @@
 
     <string name="gestures_disabled">Disabled</string>
     <string name="gestures_wake_device">Wake device</string>
+    <string name="gestures_pulse_ambient_display">Pulse to ambient display</string>
     <string name="gestures_toggle_flashlight">Toggle flashlight</string>
     <string name="gestures_toggle_airplane_mode">Toggle airplane mode</string>
     <string name="gestures_play_pause_music">Play/Pause music</string>
