--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -31,6 +31,7 @@
     <string name="keywords_gestures">screen touchscreen draw swipe finger</string>
 
     <string name="gestures_double_tap">Double-tap</string>
+    <string name="gestures_single_tap">Single-tap</string>
     <string name="gestures_draw_v">Draw V</string>
     <string name="gestures_draw_inverse_v">Draw Inverse V</string>
     <string name="gestures_draw_o">Draw O</string>
@@ -47,6 +48,7 @@
 
     <string name="gestures_disabled">Disabled</string>
     <string name="gestures_wake_device">Wake device</string>
+    <string name="gestures_pulse_ambient">Show ambient display</string>
     <string name="gestures_toggle_flashlight">Toggle flashlight</string>
     <string name="gestures_toggle_airplane_mode">Toggle airplane mode</string>
     <string name="gestures_play_pause_music">Play/Pause music</string>
