Settings: add support for single tap to wake [4/4]
Created a separate array for single tap to wake, as we will
only support pulse to ambient display gesture for single tap.

Change-Id: I718828645137965ea5b5342a567638d2e767c4d9

--- a/res/values/pa_arrays.xml
+++ b/res/values/pa_arrays.xml
@@ -20,7 +20,6 @@
     <string-array name="gestures_entries">
         <item>@string/gestures_disabled</item>
         <item>@string/gestures_wake_device</item>
-        <item>@string/gestures_pulse_ambient_display</item>
         <item>@string/gestures_toggle_flashlight</item>
         <item>@string/gestures_toggle_airplane_mode</item>
         <item>@string/gestures_play_pause_music</item>
@@ -33,7 +32,6 @@
     <string-array name="gestures_values">
         <item>0</item>
         <item>1</item>
-        <item>2</item>
         <item>3</item>
         <item>4</item>
         <item>5</item>
@@ -41,6 +39,16 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+    </string-array>
+
+    <string-array name="gestures_entries_ambient">
+        <item>@string/gestures_disabled</item>
+        <item>@string/gestures_pulse_ambient_display</item>
+    </string-array>
+
+    <string-array name="gestures_values_ambient">
+        <item>0</item>
+        <item>2</item>
     </string-array>
 
     <!-- Fingerprint sensor locations.  Devices should configure their sensor location using
