Buttons: Add a toggle navbar feature.
Change-Id: If5ac4ce40c2f62c38fd70e0cd39bf25cc61fa2f7

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -31,4 +31,10 @@
             android:summary="@string/hardware_brightness_keys_summary"
             android:persistent="false" />
 
+    <SwitchPreference
+        android:key="navigation_bar"
+        android:title="@string/enable_navigation_bar_title"
+        android:summary="@string/enable_navigation_bar_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
