Buttons: Add a toggle navbar feature.
Change-Id: If5ac4ce40c2f62c38fd70e0cd39bf25cc61fa2f7

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -158,5 +158,7 @@
     <string name="hardware_brightness_keys_summary">Turn on capacitive keys backlight</string>
     <string name="swap_navigation_keys_title">Swap buttons</string>
     <string name="swap_navigation_keys_summary">Swap back and recents buttons</string>
+    <string name="enable_navigation_bar_title">On-screen navigation bar</string>
+    <string name="enable_navigation_bar_summary">Enable on-screen navigation bar</string>
 
 </resources>
