Settings: Introduce Applock [1/3]
Signed-off-by: rituj <ritujbeniwal@gmail.com>
Change-Id: Ic8bb812148c7a17cbecdeedd3560493bdf576bae

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -150,4 +150,15 @@
     <string name="adaptive_playback_timeout_5_min_summary">On (5 minutes)</string>
     <string name="adaptive_playback_timeout_10_min">10 minutes</string>
     <string name="adaptive_playback_timeout_10_min_summary">On (10 minutes)</string>
+
+    <!-- App lock -->
+    <string name="app_lock_title">Secure apps</string>
+    <string name="app_lock_locked">Locked</string>
+    <string name="app_lock_unlocked">Unlocked</string>
+    <string name="applock_show_only_on_wake">Keep app unlocked until screen off</string>
+    <string name="app_lock_setup">Manage apps to secure with authentication</string>
+    <plurals name="app_lock_summary">
+        <item quantity="one">1 app locked</item>
+        <item quantity="other">%d apps locked</item>
+    </plurals>
 </resources>
